# nornir-dispatch

./: LICENSE  README.md  pyproject.toml  tasks.py
.github/workflows/: publish-to-pypi.yml  tests.yml
examples/: example_driver.py  example_tasks.py  hosts.yaml
nornir_dispatch/: __init__.py
nornir_dispatch/plugins/tasks/: dispatcher.py
tests/: test_registry.py
